[C6] If the user has deleted, can't edit or delete
